# secpolicy

./: .clang-format  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic-server.c  challenge-client.c  challenge-server.c
include/: CMakeLists.txt
include/secpolicy/: secpolicy.h
lib/: CMakeLists.txt
src/: challenge.c  challenge.h  comms.c  comms.h  peer.c  peer.h  proc.c  proc.h  proto.h  secpolicy.c  strlcpy.c  strlcpy.h  user.c  user.h
test/: CMakeLists.txt  CallbackTest.cpp  ChallengeTest.cpp  ClientSocket.hpp  CredsTest.cpp  GidTest.cpp  GroupTest.cpp  PeerCredsTest.cpp  PeerNameTest.cpp  PeerTest.cpp  PermsTest.cpp  Process.hpp  ProgramTest.cpp  SecPolicy.hpp  ServerSocket.hpp  UidTest.cpp  UserTest.cpp
